Some reorganization and naming.

--- a/src/Render/CMakeLists.txt
+++ b/src/Render/CMakeLists.txt
@@ -3,27 +3,30 @@ microcosm_add_library(
   SHARED
   SOURCES
     "common.cc"
-    "More/Scattering/Diffuse.cc"
-    "More/Scattering/Diffusion.cc"
-    "More/Scattering/Fresnel.cc"
-    "More/Shape/Follicle.cc"
     "Manifold.cc"
     "Material.cc"
-    "More/Scattering/Media.cc"
-    "More/Scattering/Microflake.cc"
-    "More/Scattering/Microsurface.cc"
     "MLT.cc"
     "Path.cc"
-    "More/Scattering/Phase.cc"
-    "More/Shape/Primitives.cc"
-    "More/Spectrum/Prospect.cc"
-    "More/Spectrum/RefractiveIndex.cc"
     "Scattering.cc"
     "Scene.cc"
     "Shape.cc"
     "Spectrum.cc"
     "SpectrumImage.cc"
+    "More/Scattering/Diffuse.cc"
+    "More/Scattering/Diffusion.cc"
+    "More/Scattering/Fresnel.cc"
+    "More/Scattering/Media.cc"
+    "More/Scattering/Microflake.cc"
+    "More/Scattering/Microsurface.cc"
+    "More/Scattering/Phase.cc"
+    "More/Shape/Cylinder.cc"
+    "More/Shape/Disk.cc"
+    "More/Shape/Follicle.cc"
+    "More/Shape/Sphere.cc"
+    "More/Shape/Triangle.cc"
     "More/Shape/TriangleMesh.cc"
+    "More/Spectrum/Prospect.cc"
+    "More/Spectrum/RefractiveIndex.cc"
   DEPENDS 
     ${PROJECT_NAME}::Geometry
     ${PROJECT_NAME}::Quadrature
