--- a/src/Render/unit_tests/CMakeLists.txt
+++ b/src/Render/unit_tests/CMakeLists.txt
@@ -1,6 +1,7 @@
-#microcosm_add_tests(
-#  "test_Render"
-#  SOURCES
-#  DEPENDS
-#    ${PROJECT_NAME}::Render
-#  )
+microcosm_add_tests(
+  "test_Render"
+  SOURCES
+    "Polarization.cc"
+  DEPENDS
+    ${PROJECT_NAME}::Render
+  )
