--- a/src/Geometry/CMakeLists.txt
+++ b/src/Geometry/CMakeLists.txt
@@ -8,14 +8,13 @@ microcosm_add_library(
     "FCurve.cc"
     "FileMTL.cc"
     "FileOBJ.cc"
-    "FilePLY.cc"
     "glTF.cc"
     "HalfEdgeMesh.cc"
     "ImmutableBVH.cc"
     "ImmutableKDTree.cc"
     "IntersectMPR.cc"
     "Mesh.cc"
-    "PiecewiseLinear.cc"
+    "PiecewiseLinearCurve.cc"
     "SparseMatrix.cc"
   DEPENDS 
     ${PROJECT_NAME}::Json
@@ -23,4 +22,9 @@ microcosm_add_library(
   EXPORT_FILENAME "Microcosm/Geometry/Export.h"
   )
 target_include_directories(Geometry PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/thirdparty")
+if(assimp_FOUND)
+  target_link_libraries(Geometry PUBLIC assimp::assimp)
+  target_compile_definitions(Geometry PUBLIC -DMI_BUILT_WITH_ASSIMP=1)
+endif()
 add_subdirectory(unit_tests)
+
