--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ microcosm_add_library("miniz" SHARED SOURCES "miniz.c" "miniz.cc" EXPORT_MACRO "
 microcosm_add_library("Quadrature" SHARED SOURCES "Quadrature.cc" EXPORT_MACRO "MI_QUADRATURE_API" EXPORT_FILENAME "Microcosm/Quadrature_Export.h")
 microcosm_add_library("Serializer" SHARED SOURCES "Serializer.cc" DEPENDS ${PROJECT_NAME}::miniz EXPORT_MACRO "MI_SERIALIZER_API" EXPORT_FILENAME "Microcosm/Serializer_Export.h")
 microcosm_add_library("stbi" SHARED SOURCES "stbi.cc" DEPENDS ${PROJECT_NAME}::miniz EXPORT_MACRO "MI_STBI_API" EXPORT_FILENAME "Microcosm/stbi_Export.h")
+find_package(assimp QUIET)
 find_package(PkgConfig QUIET)
 if(PkgConfig_FOUND)
   pkg_check_modules(
